# lychee_potd_provider

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  lycheeprovider.cpp  lycheeprovider.h  lycheeprovider.json  lycheeprovider.json.license
